force-app/main/default/objects/Sales_Order_Return__c/Sales_Order_Return__c.object-meta.xml
<CustomObject>
    <label>Sales Order Return</label>
    <nameField>
        <displayFormat>SOR-{0000}</displayFormat>
        <label>Voucher No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>