force-app/main/default/objects/Sales_Order_Return__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Sales_Order_Return_Line_Item__c.Net_Amount__c</summarizedField>
    <summaryForeignKey>Sales_Order_Return_Line_Item__c.Doc_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>