force-app/main/default/objects/Sales_Order_Return__c/fields/Bill_To_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To (Customer Name)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Party__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order Returns</relationshipLabel>
    <relationshipName>Sales_Order_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>