force-app/main/default/objects/Sales_Order_Return__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Customer_Party__r.BillingStreet + BR() +
Customer_Party__r.BillingCity + &quot;, &quot;+
Customer_Party__r.BillingState +&quot; &quot; +
Customer_Party__r.BillingPostalCode + BR() +
Customer_Party__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>