force-app/main/default/objects/Sales_Order_Return__c/fields/Container_No__c.field-meta.xml
<CustomField>
    <fullName>Container_No__c</fullName>
    <label>Container No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>