force-app/main/default/objects/Sales_Order_Return__c/fields/CST_No__c.field-meta.xml
<CustomField>
    <fullName>CST_No__c</fullName>
    <label>CST No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>