force-app/main/default/objects/Sales_Order_Return__c/fields/Customer_Party__c.field-meta.xml
<CustomField>
    <fullName>Customer_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer/ Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Returns</relationshipLabel>
    <relationshipName>Sales_Order_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>