force-app/main/default/objects/Sales_Order_Return__c/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>Sales_Order_Dispatch_Delivery_Note__c</referenceTo>
    <relationshipLabel>Sales Order Returns</relationshipLabel>
    <relationshipName>Sales_Order_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>