force-app/main/default/objects/Sales_Order_Return__c/fields/Dispatch_To_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_To_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch To (Customer Name)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Shipping_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.isPrimary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order Returns (Dispatch To (Customer Name))</relationshipLabel>
    <relationshipName>Sales_Order_Returns1</relationshipName>
    <type>Lookup</type>
</CustomField>