force-app/main/default/objects/Sales_Order_Return__c/fields/Docket_LR_Date__c.field-meta.xml
<CustomField>
    <fullName>Docket_LR_Date__c</fullName>
    <label>Docket LR Date</label>
    <type>Date</type>
</CustomField>