force-app/main/default/objects/Sales_Order_Return__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Sales Order Returns</relationshipLabel>
    <relationshipName>Sales_Order_Returns</relationshipName>
    <type>Lookup</type>
</CustomField>