force-app/main/default/objects/Sales_Order_Return__c/fields/LC_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>LC_Expected_Date__c</fullName>
    <label>LC Expected Date</label>
    <type>Date</type>
</CustomField>