force-app/main/default/objects/Sales_Order_Return__c/fields/LC_Term__c.field-meta.xml
<CustomField>
    <fullName>LC_Term__c</fullName>
    <label>LC Term</label>
    <length>20</length>
    <type>Text</type>
</CustomField>