force-app/main/default/objects/Sales_Order_Return__c/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MRN</label>
    <referenceTo>MRN__c</referenceTo>
    <relationshipLabel>Sales Order Returns</relationshipLabel>
    <relationshipName>Sales_Order_Returns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>