force-app/main/default/objects/Sales_Order_Return__c/fields/Payment_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Days__c</fullName>
    <label>Payment Term (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>