force-app/main/default/objects/Sales_Order_Return__c/fields/Shipping_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State_Province__c</fullName>
    <label>Shipping State Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>