force-app/main/default/objects/Sales_Order_Return__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>