force-app/main/default/objects/Sales_Order_Return__c/fields/Term_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>Term_And_Condition__c</fullName>
    <label>Term And Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>