force-app/main/default/objects/Sales_Order_Return__c/fields/VAT_TIN_No__c.field-meta.xml
<CustomField>
    <fullName>VAT_TIN_No__c</fullName>
    <label>VAT/TIN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>